--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-pdf": "^7.5.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
